[package]
name = "jasmine-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
thiserror = "1.0.56"

[dependencies.jasmine-ast]
path = "../jasmine-ast"

[dependencies.jasmine-macros]
path = "../jasmine-macros"

[lib]
