[package]
name = "jasmine-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simple_logger = { version = "4.3.3", features = ["nightly", "stderr"] }
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
thiserror = "1.0.56"
